fix login layout

--- a/index.html
+++ b/index.html
@@ -13,32 +13,18 @@
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class=" flex justify-center items-center bg-white">
+  <body class="flex justify-center items-center bg-white">
     <!-- Container -->
-    <div class="w-96 rounded-3xl p-8  bg-[#f4f5f7]">
-      <!-- Logo Section -->
-      <div class="relative flex justify-center items-center -mb-12 h-[250px]">
-        <!-- Half Circle Gradient -->
-        <!-- <div
-          class="w-40 h-40 bg-gradient-to-t from-white to-blue-100 rounded-full absolute top-20 z-0"
-        ></div> -->
-
-        <!-- Background Image -->
-        <img
-          src="assets/bg.png"
-          alt="background"
-          class="absolute z-0 top-1/4 left-1/1 w-full h-full object-contain"
-        />
-
-
-
-        <!-- Center Logo -->
+    <div class="w-96 h-full rounded-3xl p-8 bg-[#f4f5f7]">
+      <!-- logo center -->
+      <div class="h-40 bg-[url('./assets/bg.png')] bg-cover relative">
         <img
           src="assets/Group.png"
-          alt="logo"
-          class="w-20 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-10"
+          alt=" "
+          class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
         />
       </div>
+      <!-- login form  -->
       <!-- Login Card -->
       <div class="bg-white shadow-md rounded-2xl px-8 pt-14 pb-8">
         <!-- Mobile Number -->
@@ -48,7 +34,6 @@
         <input
           type="text"
           placeholder="Enter your number"
-          
           class="w-full mb-4 px-4 py-3 rounded-full border border-gray-200 focus:outline-none focus:ring-2 focus:ring-blue-500 bg-[#f4f5f7]"
         />
 
