--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <label class="block text-sm sm:text-base font-medium text-gray-700 mb-1"
           >Mobile Number</label
         >
-        <input
+        <input id="mobile-number"
           type="text"
           placeholder="Enter your number"
           class="w-full mb-4 px-4 py-3 rounded-full border border-gray-200 focus:outline-none focus:ring-2 focus:ring-blue-500 bg-[#f4f5f7] text-sm sm:text-base"
@@ -47,7 +47,7 @@
         <label class="block text-sm sm:text-base font-medium text-gray-700 mb-1"
           >4 Digit Pin</label
         >
-        <input
+        <input id="pin-number"
           type="password"
           maxlength="4"
           placeholder="Enter 4 Digit Pin"
@@ -62,9 +62,9 @@
         </div>
 
         <!-- Login Button -->
-        <button
+        <button id="login-btn"
           class="w-full py-3 bg-blue-600 text-white font-medium rounded-full hover:bg-blue-700 transition text-sm sm:text-base"
-        >
+        > 
           Login
         </button>
 
@@ -83,5 +83,6 @@
         </button>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
