add singup js and user find password when forget pin

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         />
 
         <!-- Forgot Pin -->
-        <div class="text-right mb-6" id="forgot-pin">
+        <div class="text-right mb-6" id="forgot-pin-btn">
           <a href="#" class="text-sm sm:text-base text-blue-600 hover:underline"
             >Forgot PIN?</a
           >
@@ -76,7 +76,7 @@
         </div>
 
         <!-- Sign Up Button -->
-        <button
+        <button id="signup-btn"
           class="w-full py-3 bg-gray-200 text-gray-800 font-medium rounded-full hover:bg-gray-300 transition text-sm sm:text-base"
         >
           Create Account
@@ -103,7 +103,7 @@
               Cancel
             </button>
             <!-- Reset -->
-            <button class="btn btn-sm bg-blue-600 text-white rounded-full px-6">
+            <button type="submit" id="reset-btn" class="btn btn-sm bg-blue-600 text-white rounded-full px-6">
               Send Reset Link
             </button>
           </form>
