Added default active form and tab on page load, improved form switching behavior.

--- a/dashboard.html
+++ b/dashboard.html
@@ -133,9 +133,10 @@
         </div>
         <!-- Forms -->
          <!-- Latest Transactions -->
+          <div class="mt-10">
         <div
-          id="latestTransactions"
-          class="mt-6 p-6 bg-gray-100 rounded-lg shadow-md max-w-md mx-auto"
+          id="latest-transaction-form"
+          class="from-container hidden mt-6 p-6 bg-gray-100 rounded-lg shadow-md max-w-md mx-auto" 
         >
           <h2 class="text-xl font-semibold mb-4">Latest Transactions</h2>
           <div id="latest-transaction-list">
@@ -300,7 +301,7 @@
         </div>
         <!-- Get Bonus Form -->
         <div
-          id="getBonusForm"
+          id="get-bonus-form"
           class="form-container hidden p-6 bg-gray-100 rounded-lg shadow-md max-w-md mx-auto"
         >
           <h2 class="text-xl font-semibold mb-4">Get Bonus</h2>
@@ -321,7 +322,7 @@
         </div>
         <!-- Pay Bill Form -->
          <div
-          id="payBillForm"
+          id="pay-bill-form"
           class="form-container hidden p-6 bg-gray-100 rounded-lg shadow-md max-w-md mx-auto"
         >
           <h2 class="text-xl font-semibold mb-4">Pay Bill</h2>
@@ -373,7 +374,7 @@
           </div>
           <!-- Transaction History Form -->
            <div
-          id="transactionHistoryForm"
+          id="transaction-history-form"
           class="form-container hidden p-6 bg-gray-100 rounded-lg shadow-md max-w-md mx-auto"
         >
           <h2 class="text-xl font-semibold mb-4">Transaction History</h2>
@@ -392,6 +393,7 @@
           </div>
          
         </div>
+          </div>
           </div>
       </div>
     </div>
