--- a/dashboard.html
+++ b/dashboard.html
@@ -297,7 +297,7 @@
             />
           </div>
           <!-- Submit Button -->
-          <button class="btn btn-primary w-full">Send Now</button>
+          <button id="transfer-btn" class="btn btn-primary w-full">Send Now</button>
         </div>
         <!-- Get Bonus Form -->
         <div
@@ -311,14 +311,14 @@
               <span class="label-text">Enter Bonus Coupon</span>
             </label>
             <input
-              id="get-bonus-pin"
-              type="number"
-              placeholder="Enter PIN"
+              id="get-bonus-coupon"
+              type="text"
+              placeholder="Enter Coupon"
               class="input input-bordered w-full"
             />
           </div>
           <!-- Submit Button -->
-          <button class="btn btn-primary w-full">Get Bonus</button>
+          <button id = "get-bonus-btn" class="btn btn-primary w-full">Get Bonus</button>
         </div>
         <!-- Pay Bill Form -->
          <div
