assest image fix work on github deploy and dashborad js

--- a/dashboard.html
+++ b/dashboard.html
@@ -64,7 +64,7 @@
             <div
               class="card bg-gray-100 shadow-md flex flex-col items-center justify-center p-4 hover:shadow-lg transition cursor-pointer"  data-target="add-money-form"
             >
-              <img src="/assets/wallet1.png" alt="Add Money" class="" />
+              <img src="assets/wallet1.png" alt="Add Money" class="" />
               <span
                 class="text-[10px] mt-2 font-medium text-justify text-gray-500"
                 >Add Money</span
@@ -75,7 +75,7 @@
             <div
               class="card bg-gray-100 shadow-md flex flex-col items-center p-4 hover:shadow-lg transition" data-target="cashout-form"
             >
-              <img src="/assets/send1.png" alt="Cashout" class="" />
+              <img src="assets/send1.png" alt="Cashout" class="" />
               <span
                 class="text-[10px] mt-2 font-medium text-justify text-gray-500"
                 >Cashout</span
@@ -86,7 +86,7 @@
             <div
               class="card bg-gray-100 shadow-md flex flex-col justify-center items-center hover:shadow-lg transition" data-target="transfer-form"
             >
-              <img src="/assets/money1.png" alt="Transfer Money" class="" />
+              <img src="assets/money1.png" alt="Transfer Money" class="" />
               <span
                 class="text-[10px] mt-2 font-medium text-justify text-gray-500"
                 >Transfer Money</span
@@ -97,7 +97,7 @@
             <div
               class="card bg-gray-100 shadow-md flex flex-col items-center justify-center p-4 hover:shadow-lg transition" data-target="get-bonus-form"
             >
-              <img src="/assets/bonus1.png" alt="Get Bonus" class="" />
+              <img src="assets/bonus1.png" alt="Get Bonus" class="" />
               <span
                 class="text-[10px] mt-2 font-medium text-justify text-gray-500"
                 >Get Bonus</span
@@ -108,7 +108,7 @@
             <div
               class="card bg-gray-100 shadow-md flex flex-col items-center justify-center p-4 hover:shadow-lg transition" data-target="pay-bill-form"
             >
-              <img src="/assets/purse1.png" alt="Pay Bill" class="" />
+              <img src="assets/purse1.png" alt="Pay Bill" class="" />
               <span
                 class="text-[10px] mt-2 font-medium text-justify text-gray-500"
                 >Pay Bill</span
@@ -120,7 +120,7 @@
               class="card bg-gray-100 shadow-md flex flex-col items-center justify-center p-4 hover:shadow-lg transition" data-target="transaction-history-form"
             >
               <img
-                src="/assets/transaction1.png"
+                src="assets/transaction1.png"
                 alt="Transaction History"
                 class=""
               />
@@ -400,6 +400,6 @@
       </div>
     </div>
      
-    <script src="/js/dashboard.js"></script>
+    <script src="js/dashboard.js"></script>
   </body>
 </html>
